poc-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ducklake-dashboard-svc
  namespace: dashboards
spec:
  selector:
    app: poc-dashboard
  ports:
  - port: 80
    targetPort: 8050
